<resources>
    <string name="app_name">18M5</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="numero">Ingresa un número entero</string>
    <string name="texto">Ingresa un texto</string>
    <string name="decimal">Ingresa un número decimal</string>
    <string name="vof">Valor V o F</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
</resources>